# Not-a-Bug-But-a-Feature

./: README.md
backend/: .gitignore  Dockerfile  README.md  config.py  database.py  docker-compose.yml  entrypoint.sh  example_usage.py  main.py  pyproject.toml  run_server.py  test_api.py
backend/alembic/: env.py
backend/alembic/versions/: 7b5238fcf721_remove_uuid_and_username_from_users.py  92bef48be32c_add_step_tracking_to_roadmap_and_tasks.py  c82c0267485b_init_schema.py
backend/routes/: tasks.py  users.py
backend/schemas/: users.py
backend/services/: llm_service.py  sources_api_service.py  user_service.py
